apply plugin: 'java'

sourceCompatibility = '1.8'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

// NetBeans will automatically add "run" and "debug" tasks relying on the
// "mainClass" property. You may however define the property prior executing
// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
buildscript {
    dependencies {
        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
    }
    
    repositories {
        mavenLocal()
        mavenCentral()
    }
}
//
// Note however, that you may define your own "run" and "debug" task if you
// prefer. In this case NetBeans will not add these tasks but you may rely on
// your own implementation.
if (!hasProperty('mainClass')) {
    ext.mainClass = 'Logfly.Main'
}

repositories {
    mavenCentral()
    maven { url "https://mvnrepository.com/" }
    // You may define additional repositories, or even remove "mavenCentral()".
    // Read more about repositories here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
}



dependencies {
    // TODO: Add dependencies here ...
    // You can read more about how to add dependency here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
    compile fileTree(dir: 'src/lib', include: '*.jar')
    compile group: 'org.apache.commons', name: 'commons-imaging', version: '1.0-alpha1'
    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.15'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'  
    compile group: 'io.jenetics', name: 'jpx', version: '1.7.0'
    testCompile group: 'junit', name: 'junit', version: '4.10'
}

apply plugin: 'javafx-gradle-plugin'

jfx {
    mainClass = 'Logfly.Main'
    jfxMainAppJarName = "Logfly.jar"
    vendor = 'Logfly'
    appName = 'Logfly5'
    additionalAppResources = 'src/main/runlib'
    nativeReleaseVersion = "5.023"
}
